Fixed grid row gap

--- a/admin/css/avant-folio-admin.css
+++ b/admin/css/avant-folio-admin.css
@@ -5,7 +5,7 @@
 .cf-section {
 	display: grid;
 	grid-template-columns: repeat(auto-fit, minmax(340px, 1fr));
-	grid-column-gap: 16px;
+	grid-column-gap: 20px;
 	grid-row-gap: 12px;
 }
 
